css dateien wurden geändert

--- a/Sopra/WebContent/benutzerdatenAendern.xhtml
+++ b/Sopra/WebContent/benutzerdatenAendern.xhtml
@@ -20,21 +20,23 @@
 			<div class = "hauptfenster">
 				<h1 class = "ueberschrift">Benutzerdaten &auml;ndern:</h1>
 				<div id="top-nav">
-					<div id = "benutzerAendern">
-						<span class="text-info ueberschriftAufzaehlung">altes Passwort:</span>
-						<div class="eingabeDiv"><input name = "altesPasswort" type = "password" size = "30" maxlength = "30"/></div>
+					<div id = "benutzerdatenAendern">
+						<span class="text-infoBenutzerAendern ueberschriftAufzaehlung">altes Passwort:</span>
+						<div class="eingabeDivBenutzerAendern"><input name = "altesPasswort" type = "password" size = "30" maxlength = "30"/></div>
 						<br class="naechsteZeile"/>
-						<span class="text-info ueberschriftAufzaehlung">neues Passwort:</span>
-						<div class="eingabeDiv"><input name = "neuesPasswort" type = "password" size = "30" maxlength = "30"/></div>
+						<span class="text-infoBenutzerAendern ueberschriftAufzaehlung">neues Passwort:</span>
+						<div class="eingabeDivBenutzerAendern"><input name = "neuesPasswort" type = "password" size = "30" maxlength = "30"/></div>
 						<br class="naechsteZeile"/>
-						<span class="text-info ueberschriftAufzaehlung">neues Passwort best&auml;tigen:</span>
-						<div class="eingabeDiv"><input name = "passwortBestaetigen" type = "password" size = "30" maxlength = "30"/></div>
+						<span class="text-infoBenutzerAendern ueberschriftAufzaehlung">neues Passwort best&auml;tigen:</span>
+						<div class="eingabeDivBenutzerAendern"><input name = "passwortBestaetigen" type = "password" size = "30" maxlength = "30"/></div>
 						<br class="naechsteZeile"/>
-						<span class="text-info ueberschriftAufzaehlung">neue E-Mail:</span>
-						<div class="eingabeDiv"><input name = "email" type = "text" size = "30" maxlength = "30"/></div>
+						<span class="text-infoBenutzerAendern ueberschriftAufzaehlung">neue E-Mail:</span>
+						<div class="eingabeDivBenutzerAendern"><input name = "email" type = "text" size = "30" maxlength = "30"/></div>
 						<br class="naechsteZeile2"/>
-						<input type="button" name="okButton" value="&auml;ndern" class = "buttonAnordnung"/>
-						<input type="button" name="abbrechenButton" value="Abbrechen" class = "buttonAnordnung2"/>
+						<br class="naechsteZeile2"/>
+						<br class="naechsteZeile2"/>
+						<input type="button" name="okButton" value="&Auml;ndern" class = "buttonAnordnung"/>
+						<input type="button" name="abbrechenButton" value="Abbrechen"/>
 					</div>
 				</div>
 			</div>
