--- a/Sopra/WebContent/login.xhtml
+++ b/Sopra/WebContent/login.xhtml
@@ -12,9 +12,9 @@
 		<h:form>
 			<div id="cssmenu">
 				<ul>
-				   <li class='active'><h:link outcome="welcome" value="Modul betrachten"></h:link></li>
-				   <li><h:link outcome="welcome" value="Modulhandbuch"></h:link></li>
-				   <li><h:link outcome="welcome" value="Modulsuche"></h:link></li>
+				   <li class='active'><h:link value="Modul betrachten"></h:link></li>
+				   <li><h:link value="Modulhandbuch"></h:link></li>
+				   <li><h:link value="Modulsuche"></h:link></li>
 				</ul>
 			</div>
 			<div class = "hauptfenster">
@@ -27,8 +27,8 @@
 					<li class="ueberschriftAufzaehlung"><a href='#'>Module für Abschluss: Sprachzentrum</a></li>
 				</ul>
 			</div>
-			</h:form>
-			</div>
+		</h:form>
+	</div>
 		</ui:define>
 </ui:composition>
 </html>
