--- a/Sopra/WebContent/modulsuche.xhtml
+++ b/Sopra/WebContent/modulsuche.xhtml
@@ -10,7 +10,6 @@
 
 	<ui:define name="seitenbereich">
 		<div id = "seitenbereich">
-			
 			<div id="cssmenu">
 				<ul>
 				   <li ><a href='#'>Modul betrachten</a></li>
@@ -23,47 +22,76 @@
 				<p>Suchkriterien:</p>
 				<div id="top-nav">
 					<div id = "modulsuche">
-						<span class="text-info ueberschriftAufzaehlung">Studienabschluss:</span>
-						<div class="eingabeDiv">
+						<span class="text-info2Modulsuche ueberschriftAufzaehlung">Studienabschluss:</span>
+						<div class="eingabeDiv2Modulsuche">
 							<form>
 								<select>
-								<option class = "ueberschriftAufzaehlung">Alles ausw&auml;hlen</option>
-								<option class = "ueberschriftAufzaehlung">Januar 2004</option>
-								<option class = "ueberschriftAufzaehlung">Febuar 2004</option>
-								<option class = "ueberschriftAufzaehlung">M&auml;rz 2004</option>
+									<option class = "ueberschriftAufzaehlung">Alles ausw&auml;hlen</option>
+									<option class = "ueberschriftAufzaehlung">Bachelor</option>
+									<option class = "ueberschriftAufzaehlung">Master</option>
+									<option class = "ueberschriftAufzaehlung">Staatsexamen Lehramt</option>
 								</select>
 							</form>
 						</div>	
 						<br class="naechsteZeile"/>
-						<span class="text-info ueberschriftAufzaehlung">Studiengang:</span>
-						<div class="eingabeDiv">
+						<span class="text-info2Modulsuche ueberschriftAufzaehlung">Studiengang:</span>
+						<div class="eingabeDiv2Modulsuche">
 							<form>
 								<select>
-								<option class = "ueberschriftAufzaehlung">Alles ausw&auml;hlen</option>
-								<option class = "ueberschriftAufzaehlung">Januar 2004</option>
-								<option class = "ueberschriftAufzaehlung">Febuar 2004</option>
-								<option class = "ueberschriftAufzaehlung">M&auml;rz 2004</option>
+									<option class = "ueberschriftAufzaehlung">Alles ausw&auml;hlen</option>
+									<option class = "ueberschriftAufzaehlung">Advanced Materials</option>
+									<option class = "ueberschriftAufzaehlung">Advanced Oncology</option>
+									<option class = "ueberschriftAufzaehlung">Biochemie</option>
+									<option class = "ueberschriftAufzaehlung">Biologie</option>
+									<option class = "ueberschriftAufzaehlung">Chemie</option>
+									<option class = "ueberschriftAufzaehlung">Chemieingenieurwesen</option>
+									<option class = "ueberschriftAufzaehlung">Communications Technology</option>
+									<option class = "ueberschriftAufzaehlung">Comp Science and Eng</option>
+									<option class = "ueberschriftAufzaehlung">Elektrotechnik</option>
+									<option class = "ueberschriftAufzaehlung">Energy Science Technology</option>
+									<option class = "ueberschriftAufzaehlung">Export-Module Sprache</option>
+									<option class = "ueberschriftAufzaehlung">Finance</option>
+									<option class = "ueberschriftAufzaehlung">Informatik</option>
+									<option class = "ueberschriftAufzaehlung">Informationssystemtechnik</option>
+									<option class = "ueberschriftAufzaehlung">Mathematik</option>
+									<option class = "ueberschriftAufzaehlung">Mathematische Biometrie</option>
+									<option class = "ueberschriftAufzaehlung">Medieninformatik</option>
+									<option class = "ueberschriftAufzaehlung">Molekulare Medizin</option>
+									<option class = "ueberschriftAufzaehlung">Pharmaz. Biotechnologie</option>
+									<option class = "ueberschriftAufzaehlung">Philosophie</option>
+									<option class = "ueberschriftAufzaehlung">Physik</option>
+									<option class = "ueberschriftAufzaehlung">Psychologie</option>
+									<option class = "ueberschriftAufzaehlung">Software Engineering</option>
+									<option class = "ueberschriftAufzaehlung">Wirtschaftschemie</option>
+									<option class = "ueberschriftAufzaehlung">Wirtschaftsmathematik</option>
+									<option class = "ueberschriftAufzaehlung">Wirtschaftsphysik</option>
+									<option class = "ueberschriftAufzaehlung">Wirtschaftswissenscha</option>
 								</select>
 							</form>
 						</div>	
 						<br class="naechsteZeile"/>
-						<span class="text-info ueberschriftAufzaehlung">Pr&uuml;fungsordnung:</span>
-						<div class="eingabeDiv">
+						<span class="text-info2Modulsuche ueberschriftAufzaehlung">Pr&uuml;fungsordnung:</span>
+						<div class="eingabeDiv2Modulsuche">
 							<form>
 								<select>
-								<option class = "ueberschriftAufzaehlung">Alles ausw&auml;hlen</option>
-								<option class = "ueberschriftAufzaehlung">Januar 2004</option>
-								<option class = "ueberschriftAufzaehlung">Febuar 2004</option>
-								<option class = "ueberschriftAufzaehlung">M&auml;rz 2004</option>
+									<option class = "ueberschriftAufzaehlung">Alles ausw&auml;hlen</option>
+									<option class = "ueberschriftAufzaehlung">PO 2006</option>
+									<option class = "ueberschriftAufzaehlung">PO 2007</option>
+									<option class = "ueberschriftAufzaehlung">PO 2008</option>
+									<option class = "ueberschriftAufzaehlung">PO 2009</option>
+									<option class = "ueberschriftAufzaehlung">PO 2010</option>
+									<option class = "ueberschriftAufzaehlung">PO 2011</option>
+									<option class = "ueberschriftAufzaehlung">PO 2012</option>
 								</select>
 							</form>
 						</div>	
 						<br class="naechsteZeile"/>
-						<span class="text-info ueberschriftAufzaehlung">Nummer:</span>
-						<div class="eingabeDiv"><input name = "nummer" type = "text" size = "30" maxlength = "30"/></div>
+						<span class="text-info2Modulsuche ueberschriftAufzaehlung">Nummer:</span>
+						<div class="eingabeDiv2Modulsuche"><input name = "nummer" type = "text" size = "30" maxlength = "30"/></div>
 						<br class="naechsteZeile"/>
-						<span class="text-info ueberschriftAufzaehlung">Name des Moduls:</span>
-						<div class="eingabeDiv"><input name = "nameModul" type = "text" size = "30" maxlength = "30"/></div>
+						<span class="text-info2Modulsuche ueberschriftAufzaehlung">Name des Moduls:</span>
+						<div class="eingabeDiv2Modulsuche"><input name = "nameModul" type = "text" size = "30" maxlength = "30"/></div>
+						<br class="naechsteZeile2"/>
 						<br class="naechsteZeile2"/>
 						<input type="button" name="suchenButton ueberschriftButtons" value="Suchen" class = "buttonAnordnung"/>
 					</div>
