--- a/Sopra/WebContent/benutzerdatenAendern.xhtml
+++ b/Sopra/WebContent/benutzerdatenAendern.xhtml
@@ -9,38 +9,38 @@
 <ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml">
 	
 	<ui:define name="seitenbereich">
-	   		<div id = "seitenbereich">
-			<div id="cssmenu">
+	   		<h:panelGroup layout="block" id = "seitenbereich">
+			<h:panelGroup layout="block" id="cssmenu">
 				<ul>
-				   <li class='active'><a href='#'>Modul betrachten</a></li>
-				   <li><a href='#'>Modulhandbuch</a></li>
-				   <li><a href='#'>Modulssuche</a></li>
+				   <li class='active'><h:link>Modul betrachten</h:link></li>
+				   <li><h:link>Modulhandbuch</h:link></li>
+				   <li><h:link>Modulssuche</h:link></li>
 				</ul>
-			</div>
-			<div class = "hauptfenster">
+			</h:panelGroup>
+			<h:panelGroup layout="block" styleClass = "hauptfenster">
 				<h1 class = "ueberschrift">Benutzerdaten &auml;ndern:</h1>
-				<div id="top-nav">
-					<div id = "benutzerdatenAendern">
-						<span class="text-infoBenutzerAendern ueberschriftAufzaehlung">altes Passwort:</span>
-						<div class="eingabeDivBenutzerAendern"><input name = "altesPasswort" type = "password" size = "30" maxlength = "30"/></div>
+				<h:panelGroup layout="block" id="top-nav">
+					<h:panelGroup layout="block" id = "benutzerdatenAendern">
+						<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">altes Passwort:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputSecret></h:inputSecret></h:panelGroup>
 						<br class="naechsteZeile"/>
-						<span class="text-infoBenutzerAendern ueberschriftAufzaehlung">neues Passwort:</span>
-						<div class="eingabeDivBenutzerAendern"><input name = "neuesPasswort" type = "password" size = "30" maxlength = "30"/></div>
+						<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">neues Passwort:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputSecret></h:inputSecret></h:panelGroup>
 						<br class="naechsteZeile"/>
-						<span class="text-infoBenutzerAendern ueberschriftAufzaehlung">neues Passwort best&auml;tigen:</span>
-						<div class="eingabeDivBenutzerAendern"><input name = "passwortBestaetigen" type = "password" size = "30" maxlength = "30"/></div>
+						<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">neues Passwort best&auml;tigen:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputSecret></h:inputSecret></h:panelGroup>
 						<br class="naechsteZeile"/>
-						<span class="text-infoBenutzerAendern ueberschriftAufzaehlung">neue E-Mail:</span>
-						<div class="eingabeDivBenutzerAendern"><input name = "email" type = "text" size = "30" maxlength = "30"/></div>
+						<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">neue E-Mail:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputText></h:inputText></h:panelGroup>
 						<br class="naechsteZeile2"/>
 						<br class="naechsteZeile2"/>
 						<br class="naechsteZeile2"/>
-						<input type="button" name="okButton" value="&Auml;ndern" class = "buttonAnordnung"/>
-						<input type="button" name="abbrechenButton" value="Abbrechen"/>
-					</div>
-				</div>
-			</div>
-		</div>
+						<h:commandButton value="&Auml;ndern" styleClass = "buttonAnordnung"/>
+						<h:button value="Abbrechen"/>
+					</h:panelGroup>
+				</h:panelGroup>
+			</h:panelGroup>
+		</h:panelGroup>
 	</ui:define>
 	
 </ui:composition>
