--- a/Sopra/WebContent/modulsuche.xhtml
+++ b/Sopra/WebContent/modulsuche.xhtml
@@ -9,95 +9,89 @@
 <ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml">
 
 	<ui:define name="seitenbereich">
-		<div id = "seitenbereich">
-			<div id="cssmenu">
+		<h:panelGroup layout="block" id = "seitenbereich">
+			<h:panelGroup layout="block" id="cssmenu">
 				<ul>
-				   <li ><a href='#'>Modul betrachten</a></li>
-				   <li><a href='#'>Modulhandbuch</a></li>
-				   <li class='active'><a href='#'>Modulssuche</a></li>
+				   <li ><h:link>Modul betrachten</h:link></li>
+				   <li><h:link>Modulhandbuch</h:link></li>
+				   <li class='active'><h:link>Modulssuche</h:link></li>
 				</ul>
-			</div>
-			<div class = "hauptfenster">
+			</h:panelGroup>
+			<h:panelGroup layout="block" styleClass = "hauptfenster">
 				<h1 class = "ueberschrift">Modulsuche</h1>
 				<p>Suchkriterien:</p>
-				<div id="top-nav">
-					<div id = "modulsuche">
-						<span class="text-info2Modulsuche ueberschriftAufzaehlung">Studienabschluss:</span>
-						<div class="eingabeDiv2Modulsuche">
-							<form>
-								<select>
-									<option class = "ueberschriftAufzaehlung">Alles ausw&auml;hlen</option>
-									<option class = "ueberschriftAufzaehlung">Bachelor</option>
-									<option class = "ueberschriftAufzaehlung">Master</option>
-									<option class = "ueberschriftAufzaehlung">Staatsexamen Lehramt</option>
-								</select>
-							</form>
-						</div>	
+				<h:panelGroup layout="block" id="top-nav">
+					<h:panelGroup layout="block" id = "modulsuche">
+						<h:panelGroup styleClass="text-info2Modulsuche ueberschriftAufzaehlung">Studienabschluss:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche">
+							<h:form>
+								<h:selectOneMenu>
+									<f:selectItem itemLabel="Alles ausw&auml;hlen" itemValue="Alles auswaehlen"/>
+									<f:selectItem itemLabel="Bachelor" itemValue="Bachelor"/>
+									<f:selectItem itemLabel="Master" itemValue="Master"/>
+									<f:selectItem itemLabel="Staatsexamen Lehramt" itemValue="Staatsexamen Lehramt"/>
+								</h:selectOneMenu>
+							</h:form>
+						</h:panelGroup>	
 						<br class="naechsteZeile"/>
-						<span class="text-info2Modulsuche ueberschriftAufzaehlung">Studiengang:</span>
-						<div class="eingabeDiv2Modulsuche">
-							<form>
-								<select>
-									<option class = "ueberschriftAufzaehlung">Alles ausw&auml;hlen</option>
-									<option class = "ueberschriftAufzaehlung">Advanced Materials</option>
-									<option class = "ueberschriftAufzaehlung">Advanced Oncology</option>
-									<option class = "ueberschriftAufzaehlung">Biochemie</option>
-									<option class = "ueberschriftAufzaehlung">Biologie</option>
-									<option class = "ueberschriftAufzaehlung">Chemie</option>
-									<option class = "ueberschriftAufzaehlung">Chemieingenieurwesen</option>
-									<option class = "ueberschriftAufzaehlung">Communications Technology</option>
-									<option class = "ueberschriftAufzaehlung">Comp Science and Eng</option>
-									<option class = "ueberschriftAufzaehlung">Elektrotechnik</option>
-									<option class = "ueberschriftAufzaehlung">Energy Science Technology</option>
-									<option class = "ueberschriftAufzaehlung">Export-Module Sprache</option>
-									<option class = "ueberschriftAufzaehlung">Finance</option>
-									<option class = "ueberschriftAufzaehlung">Informatik</option>
-									<option class = "ueberschriftAufzaehlung">Informationssystemtechnik</option>
-									<option class = "ueberschriftAufzaehlung">Mathematik</option>
-									<option class = "ueberschriftAufzaehlung">Mathematische Biometrie</option>
-									<option class = "ueberschriftAufzaehlung">Medieninformatik</option>
-									<option class = "ueberschriftAufzaehlung">Molekulare Medizin</option>
-									<option class = "ueberschriftAufzaehlung">Pharmaz. Biotechnologie</option>
-									<option class = "ueberschriftAufzaehlung">Philosophie</option>
-									<option class = "ueberschriftAufzaehlung">Physik</option>
-									<option class = "ueberschriftAufzaehlung">Psychologie</option>
-									<option class = "ueberschriftAufzaehlung">Software Engineering</option>
-									<option class = "ueberschriftAufzaehlung">Wirtschaftschemie</option>
-									<option class = "ueberschriftAufzaehlung">Wirtschaftsmathematik</option>
-									<option class = "ueberschriftAufzaehlung">Wirtschaftsphysik</option>
-									<option class = "ueberschriftAufzaehlung">Wirtschaftswissenscha</option>
-								</select>
-							</form>
-						</div>	
+						<h:panelGroup styleClass="text-info2Modulsuche ueberschriftAufzaehlung">Studiengang:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche">
+							<h:form>
+								<h:selectOneMenu>
+										<f:selectItem itemLabel="Alles ausw&auml;hlen" itemValue="Alles auswaehlen"/>
+										<f:selectItem itemLabel="Advanced Materials" itemValue="Advanced Materials"/>
+										<f:selectItem itemLabel="Advanced Oncology" itemValue="Advanced Oncology"/>
+										<f:selectItem itemLabel="Biochemie" itemValue="Biochemie"/>
+										<f:selectItem itemLabel="Biologie" itemValue="Biologie"/>
+										<f:selectItem itemLabel="Chemie" itemValue="Chemie"/>
+										<f:selectItem itemLabel="Chemieingenieurwesen" itemValue="Chemieingenieurwesen"/>
+										<f:selectItem itemLabel="Communications Technology" itemValue="Communications Technology"/>
+										<f:selectItem itemLabel="Comp Science and Eng" itemValue="Comp Science and Eng"/>
+										<f:selectItem itemLabel="Elektrotechnik" itemValue="Elektrotechnik"/>
+										<f:selectItem itemLabel="Energy Science Technology" itemValue="Energy Science Technology"/>
+										<f:selectItem itemLabel="Export-Module Sprache" itemValue="Export-Module Sprache"/>
+										<f:selectItem itemLabel="Finance" itemValue="Finance"/>
+										<f:selectItem itemLabel="Informatik" itemValue="Informatik"/>
+										<f:selectItem itemLabel="Informationssystemtechnik" itemValue="Informationssystemtechnik"/>
+										<f:selectItem itemLabel="Mathematik" itemValue="Mathematik"/>
+										<f:selectItem itemLabel="Medieninformatik" itemValue="Medieninformatik"/>
+										<f:selectItem itemLabel="Philosophie" itemValue="Philosophie"/>
+										<f:selectItem itemLabel="Physik" itemValue="Physik"/>
+										<f:selectItem itemLabel="Wirtschaftsmathematik" itemValue="Wirtschaftsmathematik"/>
+										<f:selectItem itemLabel="Wirtschaftswissenschaften" itemValue="Wirtschaftswissenschaften"/>
+								</h:selectOneMenu>
+							</h:form>
+						</h:panelGroup>	
 						<br class="naechsteZeile"/>
-						<span class="text-info2Modulsuche ueberschriftAufzaehlung">Pr&uuml;fungsordnung:</span>
-						<div class="eingabeDiv2Modulsuche">
-							<form>
-								<select>
-									<option class = "ueberschriftAufzaehlung">Alles ausw&auml;hlen</option>
-									<option class = "ueberschriftAufzaehlung">PO 2006</option>
-									<option class = "ueberschriftAufzaehlung">PO 2007</option>
-									<option class = "ueberschriftAufzaehlung">PO 2008</option>
-									<option class = "ueberschriftAufzaehlung">PO 2009</option>
-									<option class = "ueberschriftAufzaehlung">PO 2010</option>
-									<option class = "ueberschriftAufzaehlung">PO 2011</option>
-									<option class = "ueberschriftAufzaehlung">PO 2012</option>
-								</select>
-							</form>
-						</div>	
+						<h:panelGroup styleClass="text-info2Modulsuche ueberschriftAufzaehlung">Pr&uuml;fungsordnung:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche">
+							<h:form>
+								<h:selectOneMenu>
+									<f:selectItem itemLabel="Alles ausw&auml;hlen" itemValue="Alles auswaehlen"/>
+									<f:selectItem itemLabel="PO 2006" itemValue="PO 2006"/>
+									<f:selectItem itemLabel="PO 2007" itemValue="PO 2007"/>
+									<f:selectItem itemLabel="PO 2008" itemValue="PO 2008"/>
+									<f:selectItem itemLabel="PO 2009" itemValue="PO 2009"/>
+									<f:selectItem itemLabel="PO 2010" itemValue="PO 2010"/>
+									<f:selectItem itemLabel="PO 2011" itemValue="PO 2011"/>
+									<f:selectItem itemLabel="PO 2012" itemValue="PO 2012"/>
+								</h:selectOneMenu>
+							</h:form>
+						</h:panelGroup>	
 						<br class="naechsteZeile"/>
-						<span class="text-info2Modulsuche ueberschriftAufzaehlung">Nummer:</span>
-						<div class="eingabeDiv2Modulsuche"><input name = "nummer" type = "text" size = "30" maxlength = "30"/></div>
+						<h:panelGroup styleClass="text-info2Modulsuche ueberschriftAufzaehlung">Nummer:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche"><h:inputText></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
-						<span class="text-info2Modulsuche ueberschriftAufzaehlung">Name des Moduls:</span>
-						<div class="eingabeDiv2Modulsuche"><input name = "nameModul" type = "text" size = "30" maxlength = "30"/></div>
+						<h:panelGroup styleClass="text-info2Modulsuche ueberschriftAufzaehlung">Name des Moduls:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche"><h:inputText></h:inputText></h:panelGroup>
 						<br class="naechsteZeile2"/>
 						<br class="naechsteZeile2"/>
-						<input type="button" name="suchenButton ueberschriftButtons" value="Suchen" class = "buttonAnordnung"/>
-					</div>
-				</div>
-			</div>
-		</div>
+						<h:button value="Abbrechen"/>
+						<h:commandButton value="Suchen" styleClass = "buttonAnordnung"/>
+					</h:panelGroup>
+				</h:panelGroup>
+			</h:panelGroup>
+		</h:panelGroup>
 	</ui:define>
 
 </ui:composition>
