Jsf Funktionen für Modulsuche

--- a/Sopra/WebContent/modulsuche.xhtml
+++ b/Sopra/WebContent/modulsuche.xhtml
@@ -25,7 +25,8 @@
 						<h:panelGroup styleClass="text-info2Modulsuche ueberschriftAufzaehlung">Studienabschluss:</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche">
 							<h:form>
-								<h:selectOneMenu>
+								<h:selectOneMenu id="studienabschlusss"
+												 value="#{modelBean.studienabschluss}">
 									<f:selectItem itemLabel="Alles ausw&auml;hlen" itemValue="Alles auswaehlen"/>
 									<f:selectItem itemLabel="Bachelor" itemValue="Bachelor"/>
 									<f:selectItem itemLabel="Master" itemValue="Master"/>
@@ -37,7 +38,8 @@
 						<h:panelGroup styleClass="text-info2Modulsuche ueberschriftAufzaehlung">Studiengang:</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche">
 							<h:form>
-								<h:selectOneMenu>
+								<h:selectOneMenu id="studiengang"
+												 value="#{modelBean.studiengang}">
 										<f:selectItem itemLabel="Alles ausw&auml;hlen" itemValue="Alles auswaehlen"/>
 										<f:selectItem itemLabel="Advanced Materials" itemValue="Advanced Materials"/>
 										<f:selectItem itemLabel="Advanced Oncology" itemValue="Advanced Oncology"/>
@@ -66,7 +68,8 @@
 						<h:panelGroup styleClass="text-info2Modulsuche ueberschriftAufzaehlung">Pr&uuml;fungsordnung:</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche">
 							<h:form>
-								<h:selectOneMenu>
+								<h:selectOneMenu id="pr&uuml;fungsordnung"
+												  value= "#{modelBean.pr&uuml;fungsordnung}">
 									<f:selectItem itemLabel="Alles ausw&auml;hlen" itemValue="Alles auswaehlen"/>
 									<f:selectItem itemLabel="PO 2006" itemValue="PO 2006"/>
 									<f:selectItem itemLabel="PO 2007" itemValue="PO 2007"/>
@@ -80,14 +83,14 @@
 						</h:panelGroup>	
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-info2Modulsuche ueberschriftAufzaehlung">Nummer:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche"><h:inputText></h:inputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche"> <h:inputText value="#{modelBean.nummer}"/></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-info2Modulsuche ueberschriftAufzaehlung">Name des Moduls:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche"><h:inputText></h:inputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDiv2Modulsuche"><h:inputText value="#{modelBean.modulname}" /></h:panelGroup>
 						<br class="naechsteZeile2"/>
 						<br class="naechsteZeile2"/>
 						<h:button value="Abbrechen"/>
-						<h:commandButton value="Suchen" styleClass = "buttonAnordnung"/>
+						<h:commandButton value="Suchen" styleClass = "buttonAnordnung" action="#{modelBean.sucheModul}"/> 
 					</h:panelGroup>
 				</h:panelGroup>
 			</h:panelGroup>
