--- a/Sopra/WebContent/benutzerAnlegen.xhtml
+++ b/Sopra/WebContent/benutzerAnlegen.xhtml
@@ -8,11 +8,11 @@
 
 <ui:composition template="/WEB-INF/templates/AdminTemplate.xhtml">
 	<ui:define name="seitenbereich">
-		<h:panelGroup layout="block" id = "seitenbereich">
+		<h:panelGroup layout="block" styleClass = "seitenbereich">
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
 				<h1 class = "ueberschrift">Benutzer anlegen</h1>
-				<h:panelGroup layout="block" id="top-nav">
-					<h:panelGroup layout="block" id = "benutzerAnlegen">
+				<h:panelGroup layout="block" styleClass="top-nav">
+					<h:panelGroup layout="block" styleClass = "benutzerAnlegen">
 						<h:panelGroup styleClass="text-infoBenutzerAnlegen ueberschriftAufzaehlung">Vorname:</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAnlegen"><h:inputText></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
