--- a/Sopra/WebContent/passwortVergessen.xhtml
+++ b/Sopra/WebContent/passwortVergessen.xhtml
@@ -9,12 +9,12 @@
 <ui:composition template="/WEB-INF/templates/anonymousBasicTemplate.xhtml">
 	
 	<ui:define name="seitenbereich">
-	<h:panelGroup layout="block" id = "seitenbereich">
+	<h:panelGroup layout="block" styleClass = "seitenbereich">
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
 				<h1 class = "ueberschrift">Passwort &auml;ndern:</h1>
 				<p>Ihre E-Mail Adresse</p>
-				<h:panelGroup layout="block" id="top-nav">
-					<h:panelGroup layout="block" id = "benutzerdatenAendern">
+				<h:panelGroup layout="block" styleClass="top-nav">
+					<h:panelGroup layout="block" styleClass = "benutzerdatenAendern">
 						<h:panelGroup styleClass="text-infoBenutzerAendern ueberschriftAufzaehlung">E-Mail Adresse:</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="eingabeDivBenutzerAendern"><h:inputText></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
