--- a/Sopra/WebContent/login.xhtml
+++ b/Sopra/WebContent/login.xhtml
@@ -7,10 +7,10 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 
 <ui:composition template="/WEB-INF/templates/anonymousBasicTemplate.xhtml">
-	<ui:define name="seitenbereich" id="seitenbereich">
-	<h:panelGroup layout="block" id="seitenbereich">
+	<ui:define name="seitenbereich" styleClass="seitenbereich">
+	<h:panelGroup layout="block" styleClass="seitenbereich">
 		<h:form>
-			<h:panelGroup layout="block" class = "hauptfenster">
+			<h:panelGroup layout="block" styleClass = "hauptfenster">
 				<h1 class = "ueberschrift">Modulbeschreibungen</h1>
 				<p>Bitte wählen Sie aus:</p>
 				<ul class="modulListe">
