--- a/Sopra/WebContent/ModulErstellen.xhtml
+++ b/Sopra/WebContent/ModulErstellen.xhtml
@@ -13,86 +13,88 @@
 				<h1 class = "ueberschrift">Modul erstellen</h1>
 				<h:panelGroup layout="block" styleClass="top-nav">
 					<h:panelGroup layout="block" styleClass = "modulErstellen">
+					<h:form>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Modulname:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText></h:inputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.modulname}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
-						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Modulid:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText></h:inputText></h:panelGroup>
+						<!-- <h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Modulid:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.modulid}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
-						<br class="naechsteZeile"/>
+						<br class="naechsteZeile"/>  -->
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Code:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText></h:inputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.code}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Arbeitsaufwand:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText></h:inputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.arbeitsaufwand}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Dauer:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText></h:inputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.dauer}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Dezernat:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText></h:inputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.dezernat}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Dozenten:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4"  value="#{modulErstellenBean.dozenten}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Einordnung:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4" value="#{modulErstellenBean.einordnung}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Englisch:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText></h:inputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.englisch}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
-						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Grundlage für:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Grundlage f&uuml;r:</h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4" value="#{modulErstellenBean.grundlagefuer}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Inhalt:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4" value="#{modulErstellenBean.inhalt}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Lehrformen:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4" value="#{modulErstellenBean.lehrformen}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Leistungsnachweis:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4" value="#{modulErstellenBean.leistungsnachweis}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Leistungspunkte:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText ></h:inputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText  value="#{modulErstellenBean.leistungspunkte}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Lernziele:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4" value="#{modulErstellenBean.lernziele}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Literatur:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4"  value="#{modulErstellenBean.literatur}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Modulverantwortlicher:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputText styleClass="eingabeDivModulErstellen"></h:inputText></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputText styleClass="eingabeDivModulErstellen"   value="#{modulErstellenBean.modulverantwortlicher}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Notenbildung:</h:panelGroup>
-						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4"></h:inputTextarea></h:panelGroup>
+						<h:panelGroup layout="block"><h:inputTextarea style="resize:none;" styleClass="groesseTextarea" cols="100" rows="4" value="#{modulErstellenBean.notenbildung}"></h:inputTextarea></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Sprache:</h:panelGroup>
-						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText></h:inputText></h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.sprache}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
-						<h:commandButton value="Erstellen" styleClass = "buttonAnordnung"/>
+						<h:commandButton action="#{modulErstellenBean.modulSpeichern}"  value="Erstellen" styleClass = "buttonAnordnung"/>
 						<h:button value="Abbrechen"/>
+					</h:form>	
 					</h:panelGroup>
 				</h:panelGroup>
 			</h:panelGroup>
