--- a/Sopra/WebContent/ModulErstellen.xhtml
+++ b/Sopra/WebContent/ModulErstellen.xhtml
@@ -14,6 +14,10 @@
 				<h:panelGroup layout="block" styleClass="top-nav">
 					<h:panelGroup layout="block" styleClass = "modulErstellen">
 					<h:form>
+						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">userID:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.uid}"></h:inputText></h:panelGroup>
+						<br class="naechsteZeile"/>
+						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Modulname:</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.modulname}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
@@ -30,8 +34,24 @@
 						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.arbeitsaufwand}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
+						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Voraussetzungen F&uuml;r:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.voraussetzungenfor}"></h:inputText></h:panelGroup>
+						<br class="naechsteZeile"/>
+						<br class="naechsteZeile"/>
+						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Voraussetzungen In:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.voraussetzungenin}"></h:inputText></h:panelGroup>
+						<br class="naechsteZeile"/>
+						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Dauer:</h:panelGroup>
 						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.dauer}"></h:inputText></h:panelGroup>
+						<br class="naechsteZeile"/>
+						<br class="naechsteZeile"/>
+						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Wochenstunden:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.wochenstunden}"></h:inputText></h:panelGroup>
+						<br class="naechsteZeile"/>
+						<br class="naechsteZeile"/>
+						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Turnus:</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="eingabeDivModulErstellen"><h:inputText value="#{modulErstellenBean.turnus}"></h:inputText></h:panelGroup>
 						<br class="naechsteZeile"/>
 						<br class="naechsteZeile"/>
 						<h:panelGroup styleClass="text-infoModulErstellen ueberschriftAufzaehlung">Dezernat:</h:panelGroup>
