--- a/Sopra/WebContent/login.xhtml
+++ b/Sopra/WebContent/login.xhtml
@@ -4,12 +4,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml">
 	<ui:define name="seitenbereich" styleClass="seitenbereich">
 	<h:panelGroup layout="block" styleClass="seitenbereich">
 		<h:form>
+			<p:button value="lala"></p:button>
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
 				<h1 class = "ueberschrift">Modulbeschreibungen</h1>
 				<p>Bitte wählen Sie aus:</p>
