--- a/Sopra/WebContent/login.xhtml
+++ b/Sopra/WebContent/login.xhtml
@@ -11,7 +11,7 @@
 	<ui:define name="seitenbereich" styleClass="seitenbereich">
 	<h:panelGroup layout="block" styleClass="seitenbereich">
 		<h:form>
-			<p:button value="lala"></p:button>
+			<h:commandButton value="lala" action="#{userBean.makeDaUsa}"></h:commandButton>
 			<h:panelGroup layout="block" styleClass = "hauptfenster">
 				<h1 class = "ueberschrift">Modulbeschreibungen</h1>
 				<p>Bitte wählen Sie aus:</p>
